--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ],
     "license": "MIT",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "express": "^4.18.2",
         "express-handlebars": "^7.0.4",
