--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node app.js",
+        "seed": "node seed.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "contributors": [
