--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "express": "^4.18.2",
         "express-handlebars": "^7.0.4",
         "handlebars": "^4.7.7",
-        "mongodb": "^5.1.0"
+        "mongodb": "^5.1.0",
+        "time-stamp": "^2.2.0"
     },
     "repository": {
         "type": "git",
