--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ],
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.4.0",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "express": "^4.18.2",
