--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "bcryptjs": "^2.4.3",
         "express": "^4.18.2",
         "express-handlebars": "^7.0.4",
+        "express-session": "^1.17.3",
         "handlebars": "^4.7.7",
         "mongodb": "^5.1.0",
         "time-stamp": "^2.2.0"
