--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "axios": "^1.4.0",
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.36.4",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-handlebars": "^7.0.4",
         "express-session": "^1.17.3",
