--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "express-session": "^1.17.3",
         "handlebars": "^4.7.7",
         "mongodb": "^5.1.0",
-        "time-stamp": "^2.2.0"
+        "time-stamp": "^2.2.0",
+        "xss": "^1.0.14"
     },
     "repository": {
         "type": "git",
