--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
         "cloudinary": "^1.36.4",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
         "express-handlebars": "^7.0.4",
         "express-session": "^1.17.3",
+        "fs": "^0.0.1-security",
         "handlebars": "^4.7.7",
         "mongodb": "^5.1.0",
+        "multer": "^1.4.5-lts.1",
+        "node-localstorage": "^2.2.1",
         "time-stamp": "^2.2.0",
         "xss": "^1.0.14"
     },
